# Qt-Clock-Timer

./: CMakeLists.txt  README.md
include/: Clock.hpp  CustomDisplayWidget.hpp  MainWindow.hpp  Stopwatch.hpp
src/: Clock.cpp  CustomDisplayWidget.cpp  MainWindow.cpp  Stopwatch.cpp  main.cpp
